# connorjdavis.com

./: .gitignore  .rsyncexclude  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: index_generator.py  mdx_processor.py
backend/content/: index.json
backend/content/pages/: 2024-08-02-about.mdx  2024-09-25-mailing-list.mdx  2024-09-29-privacy-policy.mdx
backend/content/posts/: 2024-07-22-core-values.mdx  2024-08-13-book-review-the-myth-of-normal.mdx  2024-09-23-book-review-mans-search-for-meaning.mdx  2024-11-09-ouray-50-ish-ultramarathon.mdx  2024-12-30-core-values-update.mdx  2025-02-04-metaphors-and-the-infinite-game.mdx  2025-03-11-platforms.mdx  2025-04-11-book-review-the-creative-act.mdx  2025-04-22-dopamine-whack-a-mole.mdx  2025-06-25-nth-order-effects.mdx  2025-08-22-life-lately.mdx  2025-08-22-lml1-nn.mdx  2025-08-23-hacker.mdx  2025-08-23-react-native-encryption.mdx
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Archive.tsx  Footnotes.tsx  Post.tsx  PostCard.tsx  PostHeader.tsx  PostSkeleton.tsx  RecentPosts.tsx  SearchAndFilter.tsx  TOCMenu.tsx  (+3 more)
scripts/backend/: convert_to_mdx.py  fastapi_content_manager.py  taxonomy_mapper.py  test_api.py
scripts/deployment/: blog-backend.service.template  deploy-frontend.sh  deploy-rsync.sh  deploy_helper.py  install-backend-service.sh
scripts/wordpress/: config.py  content_validator.py  link_analyzer.py  migrate.py  migrator.py  shortcode_analyzer.py  taxonomy_mapper.py
(+17 files in other folders)
